:iphone: Fix margin to social icons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,7 +432,8 @@ h2 {
     margin-top: 0;
   }
   aside .social-icons {
-    margin-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 15px;
   }
   article {
     overflow-y: unset;
